<resources>
    <string name="app_name">HelloMyDocDoctor</string>
    <string name="ok">Ok</string>
    <string name="forgot_password_ask">Forgot password?</string>
    <string name="please_put_a_eamil_or_mobile">Please put a email or mobile</string>
    <string name="please_put_a_valid_email_or_mobile">Please put a valid email or mobile</string>
    <string name="please_enter_password">Please enter password</string>
    <string name="wrong_password_pattern">Wrong password pattern</string>
    <string name="please_put_a_mobile_number">Please put a mobile number</string>
    <string name="please_put_a_valid_mobile_number">Please put a valid mobile number</string>
    <string name="home">Home</string>
    <string name="video_call">Video call</string>
    <string name="voice_call">Voice call</string>
    <string name="chat">Chat</string>
    <string name="forgot_password">Forgot password</string>
    <string name="enter_your_phone_number">Enter your phone number</string>
    <string name="your_phone_number">Your phone number</string>
    <string name="send_reset_code">Send reset code</string>
    <string name="something_went_wrong">Something went wrong</string>
    <string name="please_put_a_valid_mobile">Please put a valid mobile</string>
    <string name="please_put_the_otp">Please put the otp</string>
    <string name="otp_does_not_match">OTP does not match</string>
    <string name="user_id_seems_to_be_empty">User id seems to be empty</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hey">Hey!</string>
    <string name="doctor_name">Doctor Name</string>
    <string name="upcoming_appointments">Upcoming Appointments</string>
    <string name="view_all">View all</string>
    <string name="create_prescription">Create Prescription</string>
    <string name="patient_details">Patient details</string>
    <string name="diagnostic_notes">Diagnostic Notes</string>
    <string name="medicines">Medicines</string>
    <string name="lab_tests">Lab Tests</string>
    <string name="no_items_yet">No items yet</string>
    <string name="search_medicine">Search medicine</string>
    <string name="ml">Ml</string>
    <string name="dose_value">Dose Value</string>
    <string name="dose_unit">Dose Unit</string>
    <string name="unit">Unit</string>
    <string name="days">Day(s)</string>
    <string name="time_unit">Time Unit</string>
    <string name="no_items_matched">No items matched</string>
    <string name="value">Value</string>
    <string name="save">Save</string>
    <string name="add_next">Add Next</string>
    <string name="please_select_a_medicine">Please select a medicine</string>
    <string name="please_select_dose_value">Please select dose value</string>
    <string name="please_select_dose_unit">Please select dose unit</string>
    <string name="please_select_time_value">Please select time value</string>
    <string name="please_select_time_unit">Please select time unit</string>
    <string name="please_select_dose_frquency">Please select dose frequency</string>
    <string name="search_lab_test">Search lab test</string>
    <string name="add_lab_test">Add Lab Test</string>
    <string name="add_medicine">Add Medicine</string>
    <string name="please_select_lab_test">Please select a lab test</string>
    <string name="prescriptions">Prescriptions</string>
    <string name="can_not_proceed">Can not proceed</string>
    <string name="prescription_submitted_successfully">Prescription submitted successfully</string>
    <string name="hellomydoc">HelloMyDoc</string>
    <string name="are_you_sure_to_logout">Are you sure to logout?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="logout">Logout</string>
    <string name="update">Update</string>
    <string name="appointment_history">Appointment History</string>
    <string name="sort_by_date">Sort by Date</string>
    <string name="sort_by_patient">Sort by Patient</string>
    <string name="sort_by_prescribed">Sort by Prescribed</string>
    <string name="doctor">Doctor</string>
    <string name="_00_00_mins">00:00 Mins</string>
    <string name="title_activity_chat">ChatActivity</string>
    <string name="user_not_found">User not found</string>
    <string name="patient_not_found">Patient not found</string>
</resources>