<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.HomeFragment"
    android:padding="24dp">

    <TextView
        android:id="@+id/tv_hey"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:text="@string/hey"
        android:textSize="20sp"/>

    <TextView
        android:id="@+id/tv_doctor_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        android:text="You"
        android:textSize="34sp"
        android:fontFamily="@font/roboto_bold"
        app:layout_constraintTop_toBottomOf="@id/tv_hey"
        android:textColor="@color/black"
        />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/iv_profile_image"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:src="@mipmap/ic_launcher"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/tv_doctor_name"
        app:civ_border_width="2dp"
        app:civ_border_color="@color/gray"/>

    <TextView
        android:id="@+id/tv_upcoming_appointments"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        android:text="@string/upcoming_appointments"
        android:textSize="20sp"
        android:fontFamily="@font/roboto_bold"
        app:layout_constraintTop_toBottomOf="@id/tv_doctor_name"
        android:textColor="@color/black"
        android:layout_marginTop="48dp"
        />

    <TextView
        android:id="@+id/tv_view_all"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintRight_toRightOf="parent"
        android:text="@string/view_all"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@id/tv_hey"
        app:layout_constraintTop_toTopOf="@id/tv_upcoming_appointments"
        app:layout_constraintBottom_toBottomOf="@id/tv_upcoming_appointments"
        />

    <com.hellomydoc.doctor.anyListView.AnyListView
        android:id="@+id/alv_upcoming_appointments"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/tv_upcoming_appointments"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginTop="8dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>