<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_toolbar"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent">

        <ImageView
            android:id="@+id/iv_menu"
            android:layout_width="56dp"
            android:layout_height="match_parent"
            android:paddingHorizontal="12dp"
            android:src="@drawable/ic_baseline_menu_24"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            android:background="@drawable/circular_ripple"
            android:clickable="true"
            android:focusable="true" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:src="@drawable/ic_logo_hellomydoc"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:padding="12dp"/>


        <ImageView
            android:layout_width="64dp"
            android:layout_height="match_parent"
            android:src="@drawable/ic_outline_notifications_none_24"
            app:layout_constraintRight_toRightOf="parent"
            android:paddingHorizontal="12dp"
            android:background="@drawable/circular_ripple"
            android:clickable="true"
            android:focusable="true" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/gray"
            app:layout_constraintBottom_toBottomOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/tv_head"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_medicine"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cl_toolbar"
        android:layout_marginTop="12dp"
        android:textColor="@color/black"
        android:textSize="20dp"
        android:fontFamily="@font/roboto_bold"
        />

    <com.hellomydoc.doctor.views.RemoteAutocompleteTextView
        android:id="@+id/ratv_medicines"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tv_head"
        android:background="@drawable/text_box_border"
        android:padding="12dp"
        android:layout_margin="8dp"
        android:hint="@string/search_medicine"/>

    <TextView
        android:id="@+id/tv_dose_value"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="5"
        app:layout_constraintLeft_toLeftOf="@id/ratv_medicines"
        app:layout_constraintTop_toBottomOf="@id/ratv_medicines"
        android:layout_marginTop="8dp"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toLeftOf="@id/tv_dose_unit"
        android:background="@drawable/text_box_border"
        android:gravity="center"
        android:padding="16dp"
        android:textSize="18sp"
        android:foreground="?android:attr/selectableItemBackground"
        android:clickable="true"
        />

    <TextView
        android:id="@+id/tv_dose_unit"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/ml"
        app:layout_constraintRight_toRightOf="@id/ratv_medicines"
        app:layout_constraintTop_toTopOf="@id/tv_dose_value"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toRightOf="@id/tv_dose_value"
        android:background="@drawable/text_box_border"
        android:gravity="center"
        android:padding="16dp"
        android:textSize="18sp"
        android:foreground="?android:attr/selectableItemBackground"
        android:clickable="true"/>

    <TextView
        android:id="@+id/tv_time_value"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="7"
        app:layout_constraintLeft_toLeftOf="@id/ratv_medicines"
        app:layout_constraintTop_toBottomOf="@id/tv_dose_value"
        android:layout_marginTop="8dp"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toLeftOf="@id/tv_time_unit"
        android:background="@drawable/text_box_border"
        android:gravity="center"
        android:padding="16dp"
        android:textSize="18sp"
        android:foreground="?android:attr/selectableItemBackground"
        android:clickable="true"
        />

    <TextView
        android:id="@+id/tv_time_unit"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/days"
        app:layout_constraintRight_toRightOf="@id/ratv_medicines"
        app:layout_constraintTop_toTopOf="@id/tv_time_value"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toRightOf="@id/tv_time_value"
        android:background="@drawable/text_box_border"
        android:gravity="center"
        android:padding="16dp"
        android:textSize="18sp"
        android:foreground="?android:attr/selectableItemBackground"
        android:clickable="true"/>


    <com.hellomydoc.doctor.anyListView.AnyListView
        android:id="@+id/alv_doses"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tv_time_value"
        android:layout_marginTop="24dp"
        android:layout_marginHorizontal="12dp"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/bt_save"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/save"
        app:layout_constraintLeft_toLeftOf="@id/ratv_medicines"
        app:layout_constraintTop_toBottomOf="@id/alv_doses"
        android:layout_marginTop="24dp"
        app:layout_constraintRight_toLeftOf="@id/bt_add_next"
        android:layout_marginRight="12dp"
        android:clickable="true"
        />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/bt_add_next"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/add_next"
        app:layout_constraintRight_toRightOf="@id/ratv_medicines"
        app:layout_constraintTop_toTopOf="@id/bt_save"
        app:layout_constraintLeft_toRightOf="@id/bt_save"
        android:layout_marginLeft="12dp"
        android:backgroundTint="#506367"
        android:clickable="true"
        />

    <com.hellomydoc.doctor.anyListView.AnyListView
        android:id="@+id/alv_medicines"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintLeft_toLeftOf="@id/ratv_medicines"
        app:layout_constraintRight_toRightOf="@id/ratv_medicines"
        app:layout_constraintTop_toBottomOf="@id/bt_save"
        android:layout_marginTop="12dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="12dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>